# Astronomy-Time-Series-Analysis-Toolkit

./: .gitignore  README.md  pyproject.toml
astrotime/: __init__.py  loader.py  periodogram.py  phasefold.py  plotting.py
astrotime.egg-info/: PKG-INFO  requires.txt
examples/: download_tess_data.py  quickstart.ipynb  test_loader.py  test_plot.py
tests/: test_loader.py  test_periodogram.py  test_phasefold.py  test_plot.py
tests/data/: test_lightcurve.csv
